--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=SWT301FLYEZY_SWT301FLYEZY
+sonar.projectKey=SWT301FLYEZY_SWP301_v2.0
 sonar.organization=swt301flyezy
 sonar.java.binaries=build
 
